--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
               class="img1"
             />
             <img
-              src="/assets/img/Motorcycle 63.png"
+              src="./assets/img/Motorcycle 63.png"
               alt="Motorcycle_of_future"
               class="img2"
             />
           </div>
 
-          <img src="/assets/img/City 61.png" alt="Night-City" class="img3" />
+          <img src="./assets/img/City 61.png" alt="Night-City" class="img3" />
         </div>
       </section>
 
@@ -168,7 +168,16 @@
             </label>
           </form>
           <div class="img_price">
-            <img src="./assets/img/action-img.png" alt="prizez" />
+            <img
+              class="X-box_console_prize"
+              src="./assets/img/X-Box.png"
+              alt="X-Box_prize"
+            />
+            <img
+              class="Playstation-5_prize"
+              src="./assets/img/Playstation-5.png"
+              alt="Playstation-5_prize"
+            />
           </div>
         </div>
       </section>
@@ -176,6 +185,41 @@
       <div class="murmur-2">
         <img src="./assets/img/murmur-2.svg" alt="" />
       </div>
+      <section class="HP">
+        <div class="container HP_container">
+          <div class="wrapper_HP">
+            <div class="wrapper_HP_img">
+              <img src="./assets/img/monitor-HP.svg" alt="HP_monitor" />
+              <div class="HP_logo_icons">
+                <img
+                  class="HP_logo"
+                  src="./assets/img/logotypes.png"
+                  alt="HP_logo"
+                />
+              </div>
+            </div>
+            <div class="HP_description">
+              <h2 class="headline_HP">Полное погружение вместе с HP</h2>
+              <p class="p_HP">
+                Погрузись в современные экшен-игры с реалистичным изображением с
+                помощью монитора с диагональю 23,8 дюйма, созданном для
+                отображения максимально насыщенных цветов. Успевай реагировать
+                на любые события с временем отклика 1 мс и частотой в 144 Гц!
+              </p>
+              <ul class="advantages_list">
+                <li class="advantages_colors">Яркие насыщенные цвета</li>
+                <li class="advantages_clarity">
+                  Кристальная четкость изображения
+                </li>
+                <li class="advantages_gameplay">
+                  Быстрые движения и плавный геймплей
+                </li>
+              </ul>
+              <button class="HP_button">Подробнее</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
