add section purchase

--- a/index.html
+++ b/index.html
@@ -220,6 +220,77 @@
           </div>
         </div>
       </section>
+      <section class="purchase">
+        <div class="purchase_img">
+          <img src="./assets/img/platforms.jpg" alt="CDs_Cyberpunk2077" />
+        </div>
+        <div class="purchase_desc">
+          <h2 class="purchase_title">Купить игру Cyberpunk 2077</h2>
+          <b class="purchase_b">В комплект входит:</b>
+          <ul class="purchase_list">
+            <li>
+              <img
+                src="./assets/img/disk.svg"
+                alt="disc_icon"
+                class="purchase_list_icon"
+              />
+              <span class="span_purchase">Футляр с игровыми дисками</span>
+            </li>
+            <li>
+              <img
+                src="./assets/img/wysiwyg.svg"
+                alt="disc_icon"
+                class="purchase_list_icon"
+              />
+              <span class="span_purchase"
+                >Футляр с кодом для загрузки игры и дисками (pc)</span
+              >
+            </li>
+            <li>
+              <img
+                src="./assets/img/collection.svg"
+                alt="disc_icon"
+                class="purchase_list_icon"
+              />
+              <span class="span_purchase"
+                >Справочник с информацией об игровом мире</span
+              >
+            </li>
+          </ul>
+          <b class="purchase_b">Выберите платформу:</b>
+          <ul class="purchase_list_platforms">
+            <li>
+              <img
+                src="./assets/img/PC-logo.svg"
+                alt="logo_PC"
+                class="logo_PC"
+              />
+            </li>
+            <li>
+              <img
+                src="./assets/img/xbox-one-3 logo.svg"
+                alt="logo_xbox"
+                class="logo_xbox"
+              />
+            </li>
+            <li>
+              <img
+                src="./assets/img/stadia logo.svg"
+                alt="logo_stadia"
+                class="logo_stadia"
+              />
+            </li>
+            <li>
+              <img
+                src="./assets/img/Playstation logo.svg"
+                alt="logo_Playstation"
+                class="logo_Playstation"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <footer></footer>
   </body>
 </html>
