--- a/index.html
+++ b/index.html
@@ -291,6 +291,32 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="contaner">
+        <div class="footer_content">
+          <div class="footer_wrapper_logo">
+            <img
+              src="./assets/img/Cyberpunk_2077_logo 1.svg"
+              alt="footer_logo_Cyberpunk"
+              class="footer_logo_Cyberpunk"
+            />
+            <img
+              src="./assets/img/Bird.svg"
+              alt="logo_CD_Project_Red"
+              class="logo_CD_Project_Red"
+            />
+          </div>
+          <div class="license_policy">
+            <a href="" class="license">Лицензия</a>
+            <a href="" class="policy">Политика конфиденциальности</a>
+          </div>
+        </div>
+        <div class="copyright_content">
+          <span class="copyright"
+            >CD PROJEKT®, Cyberpunk®, Cyberpunk 2077®</span
+          >
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
